--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
     "js/navigation.js",
     "js/priority-navigation.js",
     "js/skip-link-focus-fix.js",
-    "languages/gutentheme.pot",
+    "languages/business.pot",
     "languages/readme.txt",
     "page.php",
     "readme.txt",
