Add RTL stylesheet & build process.

--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
     "header.php",
     "inc/classes/svg-icons.php",
     "inc/customizer.php",
+    "inc/headstart/en.json",
     "inc/icon-functions.php",
     "inc/jetpack.php",
     "inc/logo-resizer.php",
     "inc/template-functions.php",
     "inc/template-tags.php",
     "inc/wpcom.php",
-    "inc/headstart/en.json",
     "index.php",
     "js/customizer.js",
     "js/logo/customize-controls.js",
@@ -30,10 +30,10 @@
     "languages/readme.txt",
     "page.php",
     "readme.txt",
-    "rtl.css",
     "screenshot.png",
     "search.php",
     "single.php",
+    "style-rtl.css",
     "style.css",
     "template-parts/content-archive.php",
     "template-parts/content-none.php",
