--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
     "template-parts/content-archive.php",
     "template-parts/content-none.php",
     "template-parts/content-page.php",
-    "template-parts/content.php"
+    "template-parts/content.php",
+    "shattered.png"
   ]
 }
