--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,6 @@
     "template-parts/content-none.php",
     "template-parts/content-page.php",
     "template-parts/content.php",
-    "shattered.png"
+    "images/abstract_bg.png"
   ]
 }
