--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,6 @@
     "template-parts/content-archive.php",
     "template-parts/content-none.php",
     "template-parts/content-page.php",
-    "template-parts/content.php",
-    "images/abstract_bg.png"
+    "template-parts/content.php"
   ]
 }
